@@ -9,7 +9,9 @@ Bugfixes:
 * OPENDNSSEC-298: Only unlink existing pidfile on exit if we wrote it.
 * OPENDNSSEC-303: Return if open/parse of zonelist.xml fails in ksmutil.c
   update_zones() and cmd_listzone().
-
+* OPENDNSSEC-304: Signer Engine: Check pidfile on startup, if pidfile exists
+  and corresponding process is running, then complain and exit.
+   
 
 OpenDNSSEC 1.3.9 - 2012-06-15
 
